# cloudCostAnomalyHunter

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
baseline/: run_baseline.py
data/: anomaly_templates.json
env/: __init__.py  data_generator.py  environment.py  models.py  reward.py
scripts/: pre_submission_validate.py
tasks/: __init__.py  task1_zombie.py  task2_spike_rca.py  task3_full_audit.py
tests/: test_graders.py  test_openenv_compliance.py  test_reward.py
